tests-integration/tests/custom/syntax-error/missing-token-02/stderr.expected
Error: model.eprime:1:5:
  |
1 | find: bool
  |     ^
Missing <identifier>


